--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
+    "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
