--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.12.1",
     "@mui/x-date-pickers": "^6.2.1",
+    "@react-spring/three": "^9.7.2",
+    "@react-three/fiber": "^8.12.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +21,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/three": "^0.150.2",
     "axios": "^1.3.6",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
@@ -32,6 +35,7 @@
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "styled-components": "^5.3.10",
+    "three": "^0.152.0",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
