--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.127",
-    "@mui/material": "^5.12.1",
+    "@mui/material": "^5.12.2",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.2.1",
     "@react-spring/three": "^9.7.2",
     "@react-three/fiber": "^8.12.2",
@@ -18,9 +19,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.23",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@types/node": "^16.18.25",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@types/three": "^0.150.2",
     "axios": "^1.3.6",
     "dayjs": "^1.11.7",
