added stripe webhook and hid stripe settings

--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c0eea7ca-ca57-442e-99ac-d7920522b8ae</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
