--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/react-slick": "^0.23.10",
     "@types/three": "^0.150.2",
     "axios": "^1.3.6",
     "dayjs": "^1.11.7",
@@ -34,9 +35,11 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
     "three": "^0.152.0",
     "typescript": "^4.9.5",
